<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <EditText
        android:id="@+id/edit_text_first_name"
        android:hint="@string/first_name"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:ems="10"/>
    <EditText
        android:id="@+id/edit_text_last_name"
        android:hint="@string/last_name"
        android:ems="10"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_first_name"
        android:layout_alignLeft="@id/edit_text_first_name"
        android:layout_marginLeft="10dp"/>
    <Button
        android:id="@+id/button_add"
        android:text="@string/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_last_name" />
    <RadioGroup
        android:id="@+id/radio_group_gender"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/edit_text_first_name"
        android:layout_alignBottom="@id/edit_text_first_name"
        android:gravity="center">
        <RadioButton
            android:id="@+id/radio_button_male"
            android:text="@string/male"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_button_female"
            android:text="@string/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <Spinner
        android:id="@+id/spinner_nationality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/nationality"
        android:layout_alignParentRight="true"
        android:layout_below="@id/edit_text_first_name"
        android:layout_alignRight="@id/radio_group_gender"
        android:layout_toEndOf="@id/edit_text_last_name"
        android:layout_alignBottom="@id/edit_text_last_name"
        android:entries="@array/nationalities"/>

</RelativeLayout>